--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "nodemailer": "^6.6.0",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.32"
+    "typeorm": "^0.2.32",
+    "typeorm-pagination": "^2.0.1"
   }
 }
