--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/ioredis": "^4.26.3",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/multer": "^1.4.5",
     "@types/node": "^15.0.2",
     "@types/nodemailer": "^6.4.1",
+    "@types/redis": "^2.8.28",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "cross-env": "^7.0.3",
@@ -32,16 +34,20 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "celebrate": "^14.0.0",
+    "class-transformer": "^0.4.0",
     "cors": "^2.8.5",
     "date-fns": "^2.21.3",
     "dotenv": "^9.0.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
+    "ioredis": "^4.27.2",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "nodemailer": "^6.6.0",
     "pg": "^8.6.0",
+    "rate-limiter-flexible": "^2.2.2",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.32",
     "typeorm-pagination": "^2.0.1"
