storage para dev ou prod

--- a/src/environments/develop.example.env
+++ b/src/environments/develop.example.env
@@ -2,6 +2,17 @@ SECRET=
 EXPIRES_IN=
 APP_EMAIL_URL=
 APP_API_URL=
+
+# Redis Cache config
 REDIS_HOST=
 REDIS_PORT=
 REDIS_PASS=
+
+# AWS Credentials
+S3_BUCKET=
+S3_REGION=
+S3_ACCESS_KEY=
+S3_PRIVATE_KEY=
+
+# Storage Config: disk or s3
+STORAGE_DRIVER=disk
