Refatorando: Aplicando DDD

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env NODE_ENV=develop ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
-    "prod": "cross-env NODE_ENV=production node dist/shared/http/server.js",
+    "dev": "cross-env NODE_ENV=develop ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
+    "prod": "cross-env NODE_ENV=production node dist/shared/infra/http/server.js",
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
-	"lint": "eslint . --ext .ts --fix",
+    "lint": "eslint . --ext .ts --fix",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
@@ -61,6 +61,7 @@
     "rate-limiter-flexible": "^2.2.2",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.5.0",
     "typeorm": "^0.2.32",
     "typeorm-pagination": "^2.0.1"
   }
