--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "prod": "cross-env NODE_ENV=production node dist/shared/infra/http/server.js",
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
     "lint": "eslint . --ext .ts --fix",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+    "test": "jest",
+    "test:watch": "jest --watch --verbose",
+    "test:cov": "jest --coverage"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.16",
@@ -22,6 +25,7 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/ioredis": "^4.26.3",
+    "@types/jest": "^26.0.23",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/multer": "^1.4.5",
@@ -36,7 +40,9 @@
     "eslint": "^7.25.0",
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-prettier": "3.2.0",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "ts-jest": "^26.5.6",
     "ts-node-dev": "^1.1.6",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.4"
